[package]
name = "claim-domain"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore pure claim domain: ADTs + canonicalize/compute_cid/sign/verify/reference rules. NO I/O."

[lib]
path = "src/lib.rs"

# PURE: serde + serde_json + ciborium + cid + multihash + sha2 + chrono +
# thiserror only.
# Forbidden: tokio, reqwest, duckdb, keyring, atrium-*, std::fs/net/process/env.
#
# `ciborium` + `sha2` are pinned crate-locally (not at the workspace
# root) because step 02-03's boundary restricts edits to this crate.
# A later workspace-cleanup step can hoist them if other pure crates
# pick up the same deps.
#
# `proptest` is pinned crate-locally for the `proptest_strategies`
# module (step 02-04 / DD-12). It is the canonical Rust PBT crate per
# the nw-distill polyglot matrix; LC-3 is the only @property scenario
# in slice-01. Strategy lives in claim-domain so that consumers
# (test-support, acceptance tests) reach it via the pure-core import
# path. A future cleanup step may feature-gate this once we want to
# trim release-build deps further; for the slice-01 RED baseline a
# regular dep is the simplest viable shape and keeps `cargo test`
# wiring trivial for downstream crates.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
ciborium = "0.2"
sha2 = "0.10"
proptest = { workspace = true }
