[package]
name = "claim-domain"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore pure claim domain: ADTs + canonicalize/compute_cid/sign/verify/reference rules. NO I/O."

[lib]
path = "src/lib.rs"

# PURE: serde + serde_json + ciborium + cid + multihash + sha2 + chrono +
# thiserror only.
# Forbidden: tokio, reqwest, duckdb, keyring, atrium-*, std::fs/net/process/env.
#
# `ciborium` + `sha2` are pinned crate-locally (not at the workspace
# root) because step 02-03's boundary restricts edits to this crate.
# A later workspace-cleanup step can hoist them if other pure crates
# pick up the same deps.
#
# `proptest` is pinned crate-locally for the `proptest_strategies`
# module (step 02-04 / DD-12). It is the canonical Rust PBT crate per
# the nw-distill polyglot matrix; LC-3 is the only @property scenario
# in slice-01. Strategy lives in claim-domain so that consumers
# (test-support, acceptance tests) reach it via the pure-core import
# path. A future cleanup step may feature-gate this once we want to
# trim release-build deps further; for the slice-01 RED baseline a
# regular dep is the simplest viable shape and keeps `cargo test`
# wiring trivial for downstream crates.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
cid = { workspace = true }
multihash = { workspace = true }
ciborium = "0.2"
sha2 = "0.10"
proptest = { workspace = true }
# NFC normalization for the counter-claim `--reason` text (WD-35 /
# ADR-015 / Q-DELIVER-1). PURE — no I/O; it is the Servo project's
# focused NFC crate (rejected `icu_normalizer` as heavier per
# technology-stack.md). Pinned crate-locally because only the pure core
# normalizes reasons; `cargo xtask check-arch` explicitly permits it as
# a pure-core dep (it is NOT on any I/O ban list).
unicode-normalization = "0.1"
# Ed25519 primitive for sign/verify (step 03-01). Pinned crate-locally
# (not at the workspace root) so adapters that don't need Ed25519
# don't compile it. `default-features = false` keeps OS-randomness out
# of the pure core — Ed25519 signing is deterministic per RFC 8032,
# so no RNG is required; verify also never needs randomness.
ed25519-dalek = { version = "2", default-features = false }
# base64url-no-pad encoding of signature bytes per ADR-006
# §base64url-no-padding. `default-features = false` excludes the
# `std` feature; `alloc` is sufficient for `engine::Engine::encode`.
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
