[package]
name = "cli"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OpenLore CLI: composition root + verb dispatch + two-prompt UX (ADR-003)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "openlore"
path = "src/main.rs"

[features]
# D-D20 / WD-21: build-time test escape hatch for the `peer remove --purge`
# interactive confirmation. When enabled (CI acceptance builds), the
# `OPENLORE_TEST_AUTOCONFIRM=1` env var bypasses the prompt. MUST NOT be
# enabled in release builds — `verbs::peer_remove::autoconfirm_purge` then
# compiles to a `const false` with no env-var read, so a shipped binary has
# provably no auto-confirm path. `cargo xtask` (step 01-06) verifies this.
test-autoconfirm = []
# Slice-03 peer-storage probe gate. OFF at this bootstrap step because the
# `DuckDbPeerStorageAdapter::probe()` body is still a RED `todo!()` scaffold
# (01-02); enabling the gauntlet entry would panic the binary. Flipped on
# once the real probe lands with the PS-* scenarios (I-FED-3 enforces a
# non-stub body via xtask check-probes at that point).
peer-storage-probe-live = []

# DRIVER / composition root. Only crate allowed to depend on adapter-*.
[dependencies]
ports = { path = "../ports" }
claim-domain = { path = "../claim-domain" }
lexicon = { path = "../lexicon" }
adapter-duckdb = { path = "../adapter-duckdb" }
adapter-atproto-did = { path = "../adapter-atproto-did" }
adapter-atproto-pds = { path = "../adapter-atproto-pds" }
adapter-system-clock = { path = "../adapter-system-clock" }
# Slice-02 (github scraper; ADR-019). The composition root is the only crate
# allowed to depend on `adapter-*`. `scraper-domain` is the PURE candidate
# derivation crate the `scrape github` verb calls (the live derive lands in
# Phase 03/05; the dep is wired now so the verb module can name it).
adapter-github = { path = "../adapter-github" }
scraper-domain = { path = "../scraper-domain" }
# Slice-04 (scoring + graph; ADR-022). The composition root is the only crate
# allowed to depend on `adapter-*` + the pure cores. `scoring` is the PURE
# adherence-weight core the `graph query --weighted`/`--explain` explorer path
# feeds attributed claims into (the live `scoring::score` call lands per
# acceptance scenario in Phase 02/05; the dep is wired now so the explorer
# handler module can name it and the wiring can construct the scoring config).
scoring = { path = "../scoring" }
# Slice-05 (appview search; ADR-027). The composition root wires the index-query
# CLIENT (`adapter-index-query`) for the `openlore search` verb's transport to
# the self-hosted indexer; `appview-domain` is the PURE core the verb re-composes
# the per-author network result through. The CLI links the CLIENT ONLY — NEVER
# the indexer's server (`adapter-xrpc-query-server`) / store (`adapter-index-store`)
# / ingest (`adapter-atproto-ingest`) crates (I-AV-3, enforced by xtask check-arch).
adapter-index-query = { path = "../adapter-index-query" }
appview-domain = { path = "../appview-domain" }
# Slice-06 (htmx viewer; ADR-028/030). The composition root is the ONLY crate
# allowed to link `adapter-http-viewer` — the `openlore ui` viewer's hyper HTTP
# shell over a READ-ONLY `StoreReadPort` (I-VIEW-1). The capability invariant (cli
# is the sole linker; the adapter holds no signing/identity/pds surface) is
# enforced by `xtask check-arch`'s viewer capability rule.
adapter-http-viewer = { path = "../adapter-http-viewer" }
clap = { version = "4", features = ["derive"] }
# Slice-06: the `openlore ui` serve loop binds a hyper listener; the accept loop
# needs the `net` feature in addition to the existing macros/rt (the viewer reuses
# `claim_publish::build_tokio_runtime`, a current-thread runtime).
tokio = { workspace = true, features = ["macros", "rt", "net"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Acceptance tests live at the workspace root (`tests/acceptance/*.rs`)
# per DISTILL's authored scaffolds, but the openlore binary they drive
# is THIS crate's [[bin]] — so the cli package owns the test targets
# and assert_cmd::Command::cargo_bin("openlore") resolves correctly.
[dev-dependencies]
openlore-test-support = { path = "../test-support" }
assert_cmd = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
# Step 05-08: acceptance tests for WS-8+ query DuckDB publication
# metadata directly (no StoragePort surface for it yet — that lands
# with graph-query later in phase 05). Dev-only — production cli code
# goes through StoragePort.
duckdb = { version = "1.3", features = ["bundled", "chrono"] }
chrono = { workspace = true }
# Step 04-01: the peer_pull acceptance helper `build_verifiable_peer_records`
# materializes REAL Ed25519 signatures (the slice-03 peer fixtures ship
# placeholder sigs per `fixtures_peer.rs`). Deterministic seeded keypair;
# `default-features = false` keeps OS randomness off the test compile path.
ed25519-dalek = { version = "2", default-features = false }
# Step 01-05 (slice-05; DD-AV-13/DD-AV-14): the indexer_ingest + appview_search
# acceptance harness spawns the REAL `openlore-indexer` binary via
# `assert_cmd::cargo_bin("openlore-indexer")` (the SECOND composition root) over
# an ephemeral localhost serve port (DEVOPS open-q 8 parallel-safety). Adding it
# as a dev-dependency makes cargo build the binary for these test targets so
# `cargo_bin` resolves it. The CLI's PRODUCTION dep graph still links ONLY the
# index-query CLIENT (above) — never the indexer's server/store/ingest crates
# (I-AV-3); this is a TEST-ONLY dependency on the sibling binary crate.
openlore-indexer = { path = "../openlore-indexer" }
# Slice-06 (htmx-scraper-viewer; DISTILL): the viewer acceptance harness
# (`ViewerServer` in tests/acceptance/support) issues in-test HTTP GET/POST
# against the long-running `openlore ui` process and asserts on the returned
# HTML. Unlike the slice-05 indexer ATs (which query through the `search`
# subprocess), the viewer ATs need an in-test HTTP client, so add `reqwest`'s
# BLOCKING client (rustls; same version/TLS the workspace already uses in
# `adapter-index-query`). Dev-only — production viewer code serves via hyper.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots"] }

[[test]]
name = "walking_skeleton"
path = "../../tests/acceptance/walking_skeleton.rs"
harness = true

[[test]]
name = "lexicon_conformance"
path = "../../tests/acceptance/lexicon_conformance.rs"
harness = true

[[test]]
name = "federation_roundtrip"
path = "../../tests/acceptance/federation_roundtrip.rs"
harness = true

# Slice-03 layer-2 lexicon-conformance acceptance (counter-claim). Like
# `lexicon_conformance` above it exercises the pure core (`lexicon` +
# `claim_domain`) DIRECTLY — no CLI subprocess — so it lives under the
# cli package's test targets purely for workspace co-location. Step 02-01
# activates the LCC-1 scenario; sibling scenarios stay RED (`todo!()`).
[[test]]
name = "lexicon_counter_claim"
path = "../../tests/acceptance/lexicon_counter_claim.rs"
harness = true

# Slice-03 subprocess acceptance (peer subscribe — US-FED-001 + US-FED-005).
# Drives the real `openlore` binary via `assert_cmd` + `FakePeerPds`. Step
# 03-01 activates the PS-1 scenario; PS-2..PS-8 stay RED (`todo!()`).
[[test]]
name = "peer_subscribe"
path = "../../tests/acceptance/peer_subscribe.rs"
harness = true

# Slice-03 subprocess acceptance (peer pull — US-FED-002). Drives the real
# `openlore` binary via `assert_cmd` + `FakePeerPds`. Step 04-01 activates
# the PP-1 scenario (LOAD-BEARING J-003 walking-skeleton beat); PP-2..PP-8
# stay RED (`todo!()`).
[[test]]
name = "peer_pull"
path = "../../tests/acceptance/peer_pull.rs"
harness = true

# Slice-03 subprocess acceptance (counter-claim authoring — US-FED-004).
# Drives the real `openlore` binary via `assert_cmd` + `FakePeerPds` +
# `FakePds`. Step 05-01 activates the CC-1 scenario (LOAD-BEARING J-003b
# authoring beat; KPI-FED-3 north star); CC-2..CC-6 stay RED (`todo!()`).
[[test]]
name = "counter_claim"
path = "../../tests/acceptance/counter_claim.rs"
harness = true

# Slice-03 subprocess acceptance (federated read — US-FED-003). Drives the
# real `openlore` binary via `assert_cmd` + `FakePeerPds`. Step 05-06
# activates the FQ-1 scenario (LOAD-BEARING J-003a anti-merging reader beat;
# integration gate 1 `federation_attribution_preserved` + KPI-FED-1/2
# release-blocking); FQ-2..8 stay RED (`todo!()`).
[[test]]
name = "federated_query"
path = "../../tests/acceptance/federated_query.rs"
harness = true

# Slice-02 subprocess acceptance (scrape github harvest + walking skeleton —
# US-SCR-001/002). Drives the real `openlore` binary via `assert_cmd` +
# `FakeGithub` (the public-GitHub double) + the slice-01 `FakePds`/`FakeIdentity`.
# Step 01-05 registers the target + materializes FakeGithub/fixtures so the
# 34 slice-02 scenarios classify RED (panic at `todo!()`); SG-1..SG-* stay
# RED until DELIVER's per-scenario phases 02-05.
[[test]]
name = "scrape_github"
path = "../../tests/acceptance/scrape_github.rs"
harness = true

# Slice-02 subprocess acceptance (candidate derivation render — US-SCR-002).
# Same FakeGithub-driven shape as `scrape_github`. Step 01-05 registers +
# RED gate; SC-* scenarios stay RED (`todo!()`).
[[test]]
name = "scrape_candidates"
path = "../../tests/acceptance/scrape_candidates.rs"
harness = true

# Slice-02 subprocess acceptance (scrape -> propose -> sign — US-SCR-003).
# Drives the real binary via `assert_cmd` + `FakeGithub` + the slice-01
# `FakePds`/`FakeIdentity` sign/publish path. Step 01-05 registers + RED
# gate; SS-* scenarios stay RED (`todo!()`).
[[test]]
name = "scrape_sign"
path = "../../tests/acceptance/scrape_sign.rs"
harness = true

# Slice-02 subprocess acceptance (optional PAT for higher rate limits —
# US-SCR-004). FakeGithub authenticated/rate-limited/token-rejected postures
# + the no-token-leak gate. Step 01-05 registers + RED gate; SA-* scenarios
# stay RED (`todo!()`).
[[test]]
name = "scrape_auth"
path = "../../tests/acceptance/scrape_auth.rs"
harness = true

# Slice-02 layer-2 acceptance (pure `scraper-domain` derivation properties +
# mapping-SSOT conformance — US-SCR-002/006). Exercises the PURE core
# DIRECTLY (no CLI subprocess), so it lives under the cli package's test
# targets purely for workspace co-location (symmetric with
# `lexicon_counter_claim`). `@property` proptest scenarios (SD-1..SD-3) plus
# example-pinned (SD-4..SD-6). Step 01-05 registers + RED gate; SD-* stay RED.
[[test]]
name = "scraper_domain"
path = "../../tests/acceptance/scraper_domain.rs"
harness = true

# Slice-04 subprocess acceptance (graph query explorer flags — US-GRAPH-001..006;
# ADR-020). Drives the real `openlore` binary via `assert_cmd` over a REAL
# DuckDB seeded with own + peer claims (slice-03 `claim add` / `peer add` /
# `peer pull` seam — no new external fake). Step 01-04 registers the target +
# lands the 6 explorer flags (todo!() handler bodies) so the 27 GQE scenarios
# classify RED (panic at `todo!()`); GQE-1..27 stay RED until DELIVER's
# per-scenario phases.
[[test]]
name = "graph_query_explore"
path = "../../tests/acceptance/graph_query_explore.rs"
harness = true

# Slice-04 layer-2 acceptance (pure `scoring` core transparency + anti-merging
# properties — US-GRAPH-003/005/006). Exercises the PURE core DIRECTLY (no CLI
# subprocess), so it lives under the cli package's test targets purely for
# workspace co-location (symmetric with `scraper_domain` / `lexicon_counter_claim`).
# `@property` proptest scenarios (SC-1..SC-4) plus example-pinned (SC-5..SC-6).
# Step 01-04 registers + RED gate; the 6 SC scenarios stay RED (`todo!()`).
[[test]]
name = "scoring_core"
path = "../../tests/acceptance/scoring_core.rs"
harness = true

# Slice-05 subprocess acceptance (the `openlore-indexer` verified attributed
# ingest pipeline — US-AV-001). Drives the REAL `openlore-indexer` binary via
# `assert_cmd::cargo_bin` against a `FakeIngestSource` (the adversarial + valid
# record source) + a real-`z6Mk` PLC DID-doc resolver, over a REAL separate
# `index.duckdb`. Step 01-05 registers the target + materializes the harness +
# fixtures so the 7 AV-1..AV-7 scenarios classify RED (panic at `todo!()`);
# they stay RED until DELIVER's per-scenario Phase 02+ steps.
[[test]]
name = "indexer_ingest"
path = "../../tests/acceptance/indexer_ingest.rs"
harness = true

# Slice-05 subprocess acceptance (the `openlore search` network-discovery verb —
# US-AV-002..006; ADR-027). Drives the REAL `openlore` binary via `assert_cmd`
# against a REAL `openlore-indexer serve` over an ephemeral localhost port (B1
# transport; DEVOPS open-q 8 parallel-safe) over a seeded `index.duckdb`. Step
# 01-05 registers + RED gate; the 22 AV-8..AV-29 scenarios stay RED (`todo!()`).
[[test]]
name = "appview_search"
path = "../../tests/acceptance/appview_search.rs"
harness = true

# Slice-05 layer-2 acceptance (pure `appview-domain` core — the verify-before-
# index gate + anti-merging search composition; US-AV-001/002/004). Exercises the
# PURE core DIRECTLY (no indexer subprocess), so it lives under the cli package's
# test targets purely for workspace co-location (symmetric with `scoring_core` /
# `scraper_domain` / `lexicon_counter_claim`). `@property` proptest scenarios
# (AVC-1/2/3a/3b/4) plus example-pinned (AVC-5/6/7/8). Step 01-05 registers +
# RED gate; the AVC scenarios stay RED (`todo!()`).
[[test]]
name = "appview_core"
path = "../../tests/acceptance/appview_core.rs"
harness = true

# Slice-06 subprocess + real-I/O acceptance (the `openlore ui` read-only htmx
# viewer — store views US-VIEW-001/002/003/004; ADR-028/029/030). Drives the REAL
# `openlore ui` verb via the `ViewerServer` spawn helper (long-running localhost
# `:0` server, read back) + in-test HTTP over a REAL DuckDB seeded through the
# production `claim add` / `peer pull` write paths (BR-VIEW-4 — same store). No new
# external fake (GitHub is only on `/scrape`). DISTILL registers the target +
# materializes the harness so the V-* scenarios classify RED (panic at `todo!()`);
# V-1..V-* stay RED until DELIVER's per-scenario phases.
[[test]]
name = "viewer_store"
path = "../../tests/acceptance/viewer_store.rs"
harness = true

# Slice-06 subprocess + real-I/O acceptance (the `openlore ui` live-scrape view —
# US-VIEW-005; ADR-028). Drives the REAL `openlore ui` verb via `ViewerServer` +
# in-test HTTP POST /scrape, REUSING the slice-02 `FakeGithub` double (the ONLY
# mocked boundary) for the live ephemeral harvest; persists NOTHING (BR-VIEW-2),
# renders NO sign control (BR-VIEW-1 / I-SCR-1), and surfaces derived-from ONLY
# here (I-VIEW-5 / WD-62). DISTILL registers + RED gate; V-S* stay RED (`todo!()`).
[[test]]
name = "viewer_scrape"
path = "../../tests/acceptance/viewer_scrape.rs"
harness = true

# Slice-06 subprocess + real-I/O acceptance (the `openlore ui` viewer GOLD /
# guardrail invariants — I-VIEW-1/2/4/5/6). The `@property` guardrail gold tests
# from DESIGN §7 / ADR-030 §Earned-Trust: viewer_is_read_only (store row counts
# UNCHANGED after EVERY route incl. POST /scrape), derived_from_only_on_candidates,
# store_views_work_offline, web_process_holds_no_signing_key. Drives the REAL
# `openlore ui` verb via `ViewerServer` over a REAL store. Per Mandate 11 the sad
# paths are example-based, never PBT-generated at this layer. DISTILL registers +
# RED gate; V-INV* stay RED (`todo!()`).
[[test]]
name = "viewer_invariants"
path = "../../tests/acceptance/viewer_invariants.rs"
harness = true
